apps/cafe/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cafe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cafe
  template:
    metadata:
      labels:
        app: cafe
    spec:
      containers:
        - name: cafe
          image: ghcr.io/tonygilkerson/cafe:v1.0.16
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 250m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
