apps/cafe/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: public
  rules:
  - host: tonygilkerson.us
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: cafe
            port:
              number: 80
  tls:
  - hosts:
    - tonygilkerson.us
    secretName: cafe-tls
